fix pause button spacing in a way that doesn't impact the visualization column in project view

--- a/apps/style/common.scss
+++ b/apps/style/common.scss
@@ -243,6 +243,7 @@ button.arrow:disabled {
 #soft-buttons {
   display: inline-block;
   vertical-align: top;
+  margin-left: -9px;
   -webkit-touch-callout: none;
   &.soft-buttons-compact {
     margin: 0;
